--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "dompurify": "^3.3.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -98,7 +99,6 @@
     "vaul": "^0.9.9",
     "vite-plugin-pwa": "^1.1.0",
     "vitest": "^3.2.0",
-    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
